--- a/arp/templates/home.html
+++ b/arp/templates/home.html
@@ -8,7 +8,7 @@
 <div>
 欢迎来到python
 <form action="/add/" methon="get">
-    加法: <input id="a" type="text" name="a">+<input id="b" type="text" name="b">
+    添加用户:姓名 <input id="a" type="text" name="a">年龄<input id="b" type="text" name="b">
    <button type="button" id='sum'>提交</button>
 </form>
     <input id="result" type="text" name="result">
