--- a/arp/templates/home.html
+++ b/arp/templates/home.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 <head>
     <script type="text/javascript" src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
     <meta charset="UTF-8">
     <title>HY测试</title>
 </head>
 <div>
-欢迎来到python
-<form action="/add/" methon="get">
-    添加用户:姓名 <input id="a" type="text" name="a">年龄<input id="b" type="text" name="b">
-   <button type="button" id='sum'>提交</button>
-</form>
-    <input id="result" type="text" name="result">
-
+    <h1>欢迎来到Python</h1>
+    添加用户:姓名 <input id="a" type="text" > 年龄 <input id="b" type="text" >
+    <button type="button" id='sum'>提交</button>
+    <input id="result" type="text" >
+</div>
+<div>
     <button type="button" id="chaxun">查询</button>
-    <table id="person_result",border="1">
-
+    <table id="person_result"  border="1">
         <tr>
-        <td>姓名</td>
-        <td>年龄</td>
+        <th width="150" >姓名</th>
+        <th width="150">年龄</th>
         </tr>
-
     </table>
 </div>
-</body>
 <script type="text/javascript">
 $.ajaxSetup({
-    data: {csrfmiddlewaretoken: '{{ csrf_token }}' },
+    data: {csrfmiddlewaretoken: '{{ csrf_token }}' }
 });
   $(document).ready(function(){
   $("#sum").click(function(){
@@ -35,13 +31,12 @@ $.ajaxSetup({
     $.post("/add/",{'a':a,'b':b}, function(ret){$('#result').val(ret)})
   });
   $("#chaxun").click(function(){
-    $.getJSON("/chaxun/", function(ret){
+      $('#person_result tr:gt(0)').remove();
+      $.getJSON("/chaxun/", function(ret){
         for (var i = ret.length - 1; i >= 0; i--){
              $('#person_result').append('<tr>\n' + '<td>'+ret[i].name+'</td>'+'<td>'+ret[i].age+'</td>'+' </tr>');
         }
-
-
-    })
+      })
   });
  });
 
