--- a/arp/templates/home.html
+++ b/arp/templates/home.html
@@ -3,7 +3,7 @@
 <head>
     <script type="text/javascript" src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
     <meta charset="UTF-8">
-    <title>HY测试</title>
+    <title>Python测试</title>
 </head>
 <div>
     <h1>欢迎来到Python</h1>
