--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HY测试</title>
+    <title>Python测试</title>
 </head>
 <body>
 欢迎来到python
